@@ -49,6 +49,9 @@ public:
 
     int SetChannel(unsigned int chan);
 
+    // We don't have a channel
+    int FetchChannel() { return 0; }
+
 protected:
     int Drone2Common(kis_packet *packet, uint8_t *data, uint8_t *moddata);
 
