@@ -55,7 +55,7 @@
    program understand `configure --with-gnu-libc' and omit the object files,
    it is simpler to just do this in the source for each such file.  */
 
-#if defined (_LIBC) || !defined (__GNU_LIBRARY__)
+#if defined (_LIBC) || ( !defined (__GNU_LIBRARY__) && !defined (HAVE_GETOPT_LONG) )
 
 
 #include <stdlib.h>
