@@ -19,6 +19,7 @@
 #include "config.h"
 
 #include <math.h>
+#include <sys/types.h>
 #include <dirent.h>
 
 #include "panelfront.h"
