@@ -44,6 +44,8 @@ public:
 
     int SetChannel(unsigned int chan);
 
+    int FetchChannel() { return 0; }
+
 protected:
     int Wtap2Common(kis_packet *packet, uint8_t *data, uint8_t *moddata);
 
